# Deep-learning-for-segmentation-of-micro-tomography-images

./: .gitignore  README.md  main.py  pyproject.toml
datas/: README.md
datas/Original Images/: image_v2_00.tif  image_v2_01.tif  image_v2_02.tif  image_v2_03.tif  image_v2_04.tif  image_v2_05.tif  image_v2_06.tif  image_v2_07.tif  image_v2_08.tif  image_v2_09.tif  image_v2_10.tif  image_v2_11.tif  image_v2_12.tif  image_v2_13.tif  image_v2_14.tif  image_v2_15.tif  image_v2_16.tif  image_v2_17.tif  image_v2_18.tif  image_v2_19.tif  image_v2_20.tif  image_v2_21.tif
datas/Original Masks/: image_v2_mask_00.tif  image_v2_mask_01.tif  image_v2_mask_02.tif  image_v2_mask_03.tif  image_v2_mask_04.tif  image_v2_mask_05.tif  image_v2_mask_06.tif  image_v2_mask_07.tif  image_v2_mask_08.tif  image_v2_mask_09.tif  image_v2_mask_10.tif  image_v2_mask_11.tif  image_v2_mask_12.tif  image_v2_mask_13.tif  image_v2_mask_14.tif  image_v2_mask_15.tif  image_v2_mask_16.tif  image_v2_mask_17.tif  image_v2_mask_18.tif  image_v2_mask_19.tif  image_v2_mask_20.tif  image_v2_mask_21.tif
docs/: README.md
models/: README.md  baseline_Unet.py
notebooks/: README.md
utils/: README.md
