[project]
name = "deep-learning-for-segmentation-of-micro-tomography-images"
version = "0.1.0"
description = "By combining deep learning techniques with semi-supervised methods, the project aims to build a robust segmentation framework capable of identifying porosities across the entire dataset, ultimately supporting downstream tasks such as deformation tracking and material characterization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
